aula de angular2 - rota e data binding

--- a/Angular/AulaAngular01/src/app/app.component.html
+++ b/Angular/AulaAngular01/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="d-flex justify-content-center">
   <app-topo-tela></app-topo-tela>
 </div>
-Edson
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
 <app-rodape></app-rodape>
