--- a/Angular/AulaAngular01/src/app/topo-tela/topo-tela.component.html
+++ b/Angular/AulaAngular01/src/app/topo-tela/topo-tela.component.html
@@ -1,14 +1,17 @@
 <ul class="nav">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">Active</a>
+      <a class="nav-link" routerLink="calculadora">Calculadora</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link" routerLink="calculadora-media">Calculadora Média</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link" routerLink="cadastro-aluno">Cadastro de Aluno</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+      <a class="nav-link" routerLink="apolice">Apolice</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="tela-pai">Tela Pai</a>
     </li>
   </ul>
